fix z-index

--- a/src/components/hero-airpods-max/styles.module.scss
+++ b/src/components/hero-airpods-max/styles.module.scss
@@ -1,6 +1,6 @@
 .airpods {
   position: absolute;
-  z-index: 3;
+  z-index: 5;
   left: 0;
   right: 0;
   display: grid;
